Création d’un service qui permet d’indiquer le statut de la connexion internet #10 La méthode isConnectionAvailable essaie de se connecter à google.fr et en fonction du code de réponse, on retourne le statut de la connection internet, le code est de 200 si il y a connexion.

--- a/Offline-Box-Services/pom.xml
+++ b/Offline-Box-Services/pom.xml
@@ -68,8 +68,8 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.12.6</version>
-            <scope>provided</scope>
+            <version>1.16.2</version>
+            <type>jar</type>
         </dependency>
         <!-- A Java HTTP proxy server (based on Netty) -->
         <dependency>
